[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/player/player.gd" type="Script" id=1]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.8, 3.8 )

[node name="player" type="KinematicBody2D"]
collision/safe_margin = 0.04
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
CURRENT = true
WORLD_NAME = "ghost"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.2 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true

[node name="talk_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )

[node name="jump_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
